test/core/errors/indexed_offsets_error/zs/constant_expression_error.zs
package constant_expression_error;

const int32 Constant = 2 * @index;
